# FairCredit

./: .env.example  .gitignore  Anchor.toml  CLAUDE.md  Cargo.toml  DEPLOYMENT.md  FairCredit_PRD.txt  FairCredit_PRD_CN.txt  README.md  codama.json  deployment.json  devnet-config.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: contracts-tests.yml
.shrimp/: WebGUI.md  tasks.json
.taskmaster/: config.json  state.json
.taskmaster/reports/: task-complexity-report.json
anchor/: Anchor.toml
anchor/programs/fair-credit/: Cargo.toml
anchor/programs/fair-credit/src/: events.rs  lib.rs  tests_flow_activity_submission.rs
anchor/programs/fair-credit/src/handlers/: activity.rs  course.rs  credential.rs  hub.rs  mod.rs  provider.rs  resource.rs
anchor/programs/fair-credit/src/integration_tests/: mod.rs  tests_flow_activity_submission.rs  tests_flow_hub_course.rs
anchor/programs/fair-credit/src/state/: activity.rs  course.rs  course_list.rs  credential.rs  hub.rs  mod.rs  provider.rs  resource.rs
anchor/programs/fair-credit/src/types/: course.rs  credential.rs  errors.rs  mod.rs  provider.rs
app/: .env.test  TESTING.md  netlify.toml  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  postinstall.mjs  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
docs/: PLAN-course-credential-nft.md  content-storage-architecture.md
scripts/: README.md  add-provider-to-hub.ts  check-devnet-deployment.ts  check-hub-providers.ts  create-provider-for-specific-wallet.ts  create-provider-for-wallet.ts  create-test-provider-funded.ts  dapp-integration.ts  deploy-devnet-simple.ts  deploy-minimal.ts  get-hub-authority.ts  init-hub-devnet.ts  list-providers.ts  test-deployment.ts  test-hub-decoder.ts  tsconfig.json
tests/: fair-credit.ts  provider.test.ts
(+219 files in other folders)
