[package]
name = "fair-credit"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fair_credit"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
mpl-token-metadata = "5.1.1"

[dev-dependencies]
mollusk-svm = "0.5.0"
solana-sdk = "2.2.0"
borsh = "0.10.4"
solana-system-interface = "1.0.0"

[lints]
workspace = true
